[tool.poetry]
name = "dev_rel_crew"
version = "0.1.0"
description = "dev_rel_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
dev_rel_crew = "dev_rel_crew.main:run"
train = "dev_rel_crew.main:train"
replay_from_task = "dev_rel_crew.main:replay_from_task"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
