[project]
name = "dev_rel_crew"
version = "0.1.0"
description = "dev_rel_crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai>=0.79.4",
    "duckduckgo-search>=6.3.4",
]

[project.scripts]
run_crew = "dev_rel_crew.main:run"
train = "dev_rel_crew.main:train"
replay_from_task = "dev_rel_crew.main:replay_from_task"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
