[project]
name = "dev_rel_crew"
version = "0.1.0"
description = "dev_rel_crew using crewAI"
authors = [
    { name = "Lorenze Jay Hernandez", email = "lorenzejaytech@gmail.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "duckduckgo-search>=6.3.4",
    "crewai[tools]>=0.79.4,<1.0.0",
]

[project.scripts]
dev_rel_crew = "dev_rel_crew.main:run"
run_crew = "dev_rel_crew.main:run"
train = "dev_rel_crew.main:train"
replay_from_task = "dev_rel_crew.main:replay_from_task"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
